--- a/style/scss/main_page.scss
+++ b/style/scss/main_page.scss
@@ -20,8 +20,7 @@ $color_orange: #FF9401;
         width: 200px;
     }
 
-
-    .card-pictures {
+    .card_pictures {
         width: 150px;
     }
 }
