--- a/style/css/Footer.css
+++ b/style/css/Footer.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 /*  подвал */
 .footer {
-  background-color: #e95353;
+  background-color: #EAEAEA;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 140px;
+  height: 60px;
   width: 100%;
 }
 
