--- a/style/css/fonts.css
+++ b/style/css/fonts.css
@@ -1,15 +1,10 @@
 .logo {
   font-family: "Playfair Display";
   font-weight: 700;
-  font-size: 22px;
+  font-size: 25px;
   line-height: 30px;
-  color: white;
+  color: black;
   text-decoration: none;
-}
-.logo::before {
-  content: url(../pictures/logo.png);
-  width: 25px;
-  height: 25px;
 }
 
 .but_message {
