--- a/style/css/main_page.css
+++ b/style/css/main_page.css
@@ -1,12 +1,51 @@
 @charset "UTF-8";
+.content {
+  background: #EAEAEA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .wrapped_products {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.Filter {
-  width: 250px;
+.wrapped_banner {
+  height: 197px;
+  min-width: 1110px;
+  border-radius: 30px;
+  background: #101010;
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+}
+
+.banner {
+  /* растягиваем картинку по размерам блока родителя */
+  width: 100%;
+  height: 100%;
+  padding: 60px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  background-repeat: no-repeat;
+  background-position: center -49px;
+  background-image: url(../pictures/iPhone-13-Pro-Max-silver-banner.png);
+}
+.banner .text_banner {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 37px;
+  color: #FFFFFF;
 }
 
 /* Каталог товаров */
@@ -18,10 +57,29 @@
       flex-wrap: wrap;
 }
 .products .product-item {
-  width: 200px;
+  margin: 15px;
+  width: 350px;
+  height: 400px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .products .card_pictures {
-  width: 150px;
+  width: 219px;
 }
 
 .product-item:hover .card-pictures {
