--- a/style/scss/Footer.scss
+++ b/style/scss/Footer.scss
@@ -1,15 +1,15 @@
 /*  подвал */
 
 .footer {
-    background-color: #e95353;
+    background-color: #EAEAEA;
+    ;
     display: flex;
     justify-content: center;
-    height: 140px;
+    height: 60px;
     width: 100%;
 }
 
 .wrapped_footer {
     display: flex;
     justify-content: flex-start;
-
 }
