--- a/style/scss/main_page.scss
+++ b/style/scss/main_page.scss
@@ -45,10 +45,13 @@ $color_orange: #FF9401;
 
 .products {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+
 
     .product-item {
         margin: 15px;
+        padding: 20px;
         width: 350px;
         height: 400px;
         background: #FFFFFF;
@@ -57,17 +60,29 @@ $color_orange: #FF9401;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        align-items: center;
+        // align-items: center;
     }
 
     .card_pictures {
         width: 219px;
+        margin: auto;
     }
 }
 
-.product-item:hover .card-pictures {
-    transition: 0.5s; //Время эффекта 
-    transform: scale(1.1); //Увеличиваем масштаб 
+.like {
+    overflow: hidden;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.dont {
+    background-image: url(../pictures/not_like.jpg);
+}
+
+.be {
+    background-image: url(../pictures/be_like.jpg);
 }
 
 @media(max-width: 430px) {}
