--- a/style/css/basket.css
+++ b/style/css/basket.css
@@ -10,7 +10,7 @@
   font-size: 14px;
 }
 
-.hidden {
+.invisible {
   display: none;
 }
 
@@ -55,4 +55,39 @@
   font-size: 24px;
   line-height: 29px;
   color: #f16d7f;
+}
+
+.cart-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.cart-item .product-bio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.cart-item .product-desc {
+  margin-left: 75px;
+}
+.cart-item .right-block {
+  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.cart_pictures {
+  width: 100px;
 }
