--- a/style/css/main_page.css
+++ b/style/css/main_page.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 .content {
+  width: auto;
   background: #EAEAEA;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -59,7 +60,8 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.products .product-item {
+
+.product-item {
   margin: 15px;
   padding: 20px;
   width: 350px;
@@ -68,9 +70,6 @@
   -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -79,7 +78,14 @@
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
-.products .card_pictures {
+
+.show {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.card_pictures {
   width: 219px;
   margin: auto;
 }
